[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Pavle Portic <pavle.portic@tilda.center>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
requests = "^2.22.0"
simplejson = "^3.17.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
