[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Pavle Portic <pavle.portic@tilda.center>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
fastapi = {extras = ["uvicorn"], version = "^0.48.0"}
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
